[FLINK-33787][jdbc] Java 17 support for jdbc connector